--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "devDependencies": {
     "gulp": "^3.8.1",
     "gulp-autoprefixer": "0.0.7",
+    "gulp-minify-css": "^0.3.5",
+    "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^0.5.0"
   }
 }
